# TermProjectContiki

./: CMakeLists.txt
core/net/ipv6/: sicslowpan.c  uip6.c
core/net/rpl/: rpl-icmp6.c
examples/hello-world/: hello-world.c
examples/ipv6/rpl-border-router/: border-router-modified.c
examples/ipv6/rpl-udp/: udp-client-modified.c  udp-server-modified.c
platform/z1/: contiki-conf.h  contiki-z1-main.c
tools/cooja/: CMakeLists.txt
