cmake_minimum_required(VERSION 3.12)
project(cooja)

set(CMAKE_CXX_STANDARD 14)

include_directories(examples/project_new_interface)

add_executable(cooja
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaClock.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaSerial\$1.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaSerial.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZID\$1.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZID\$2.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZID\$3.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZID.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZLED\$1.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZLED\$2.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZLED\$3.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZLED\$4.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZLED\$5.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZLED.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZRadio\$1.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZRadio\$2.class
        apps/avrora/build/org/contikios/cooja/avrmote/interfaces/MicaZRadio.class
        apps/avrora/build/org/contikios/cooja/avrmote/AvrMoteMemory\$AvrByteMonitor.class
        apps/avrora/build/org/contikios/cooja/avrmote/AvrMoteMemory.class
        apps/avrora/build/org/contikios/cooja/avrmote/MicaZCompileDialog.class
        apps/avrora/build/org/contikios/cooja/avrmote/MicaZMote.class
        apps/avrora/build/org/contikios/cooja/avrmote/MicaZMoteType.class
        apps/avrora/lib/avrora-small.jar
        apps/avrora/lib/cooja_avrora.jar
        apps/avrora/src/org/contikios/cooja/avrmote/interfaces/MicaClock.java
        apps/avrora/src/org/contikios/cooja/avrmote/interfaces/MicaSerial.java
        apps/avrora/src/org/contikios/cooja/avrmote/interfaces/MicaZID.java
        apps/avrora/src/org/contikios/cooja/avrmote/interfaces/MicaZLED.java
        apps/avrora/src/org/contikios/cooja/avrmote/interfaces/MicaZRadio.java
        apps/avrora/src/org/contikios/cooja/avrmote/AvrMoteMemory.java
        apps/avrora/src/org/contikios/cooja/avrmote/MicaZCompileDialog.java
        apps/avrora/src/org/contikios/cooja/avrmote/MicaZMote.java
        apps/avrora/src/org/contikios/cooja/avrmote/MicaZMoteType.java
        apps/avrora/build.xml
        apps/avrora/cooja.config
        apps/collect-view/build/org/contikios/cooja/plugins/collectview/CollectView\$1.class
        apps/collect-view/build/org/contikios/cooja/plugins/collectview/CollectView\$2.class
        apps/collect-view/build/org/contikios/cooja/plugins/collectview/CollectView\$3.class
        apps/collect-view/build/org/contikios/cooja/plugins/collectview/CollectView\$4.class
        apps/collect-view/build/org/contikios/cooja/plugins/collectview/CollectView.class
        apps/collect-view/java/org/contikios/cooja/plugins/collectview/CollectView.java
        apps/collect-view/build.xml
        apps/collect-view/cooja-collect-view.jar
        apps/collect-view/cooja.config
        apps/mrm/build/org/contikios/mrm/AngleInterval.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$1.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$10.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$11.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$12\$1.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$12.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$13.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$14.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$15.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$16.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$17\$1.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$17\$ImageFilter.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$17\$ImageSettingsDialog\$1.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$17\$ImageSettingsDialog\$2.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$17\$ImageSettingsDialog.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$17.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$18.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$19.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$2.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$20.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$21\$1.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$21.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$3.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$4.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$5.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$6.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$7.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$8.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$9.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$ObstacleFinderDialog\$1.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$ObstacleFinderDialog\$2.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$ObstacleFinderDialog\$3.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$ObstacleFinderDialog\$4.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$ObstacleFinderDialog\$5.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$ObstacleFinderDialog\$6.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$ObstacleFinderDialog\$7.class
        apps/mrm/build/org/contikios/mrm/AreaViewer\$ObstacleFinderDialog.class
        apps/mrm/build/org/contikios/mrm/AreaViewer.class
        apps/mrm/build/org/contikios/mrm/ChannelModel\$1.class
        apps/mrm/build/org/contikios/mrm/ChannelModel\$Parameter.class
        apps/mrm/build/org/contikios/mrm/ChannelModel\$RadioPair.class
        apps/mrm/build/org/contikios/mrm/ChannelModel\$SettingsObservable.class
        apps/mrm/build/org/contikios/mrm/ChannelModel\$TrackedSignalComponents.class
        apps/mrm/build/org/contikios/mrm/ChannelModel\$TransmissionData.class
        apps/mrm/build/org/contikios/mrm/ChannelModel\$TxPair.class
        apps/mrm/build/org/contikios/mrm/ChannelModel.class
        apps/mrm/build/org/contikios/mrm/FormulaViewer\$1.class
        apps/mrm/build/org/contikios/mrm/FormulaViewer\$2.class
        apps/mrm/build/org/contikios/mrm/FormulaViewer\$3.class
        apps/mrm/build/org/contikios/mrm/FormulaViewer\$4.class
        apps/mrm/build/org/contikios/mrm/FormulaViewer\$5.class
        apps/mrm/build/org/contikios/mrm/FormulaViewer\$6.class
        apps/mrm/build/org/contikios/mrm/FormulaViewer\$7.class
        apps/mrm/build/org/contikios/mrm/FormulaViewer\$8.class
        apps/mrm/build/org/contikios/mrm/FormulaViewer.class
        apps/mrm/build/org/contikios/mrm/Interval.class
        apps/mrm/build/org/contikios/mrm/MRM\$1.class
        apps/mrm/build/org/contikios/mrm/MRM\$2.class
        apps/mrm/build/org/contikios/mrm/MRM\$3.class
        apps/mrm/build/org/contikios/mrm/MRM\$4.class
        apps/mrm/build/org/contikios/mrm/MRM\$MRMRadioConnection.class
        apps/mrm/build/org/contikios/mrm/MRM\$SettingsObservable.class
        apps/mrm/build/org/contikios/mrm/MRM.class
        apps/mrm/build/org/contikios/mrm/MRMVisualizerSkin\$1.class
        apps/mrm/build/org/contikios/mrm/MRMVisualizerSkin.class
        apps/mrm/build/org/contikios/mrm/ObstacleWorld.class
        apps/mrm/build/org/contikios/mrm/RayData\$RayType.class
        apps/mrm/build/org/contikios/mrm/RayData.class
        apps/mrm/build/org/contikios/mrm/RayPath.class
        apps/mrm/build/statistics/CDF_Normal.class
        apps/mrm/build/statistics/Gaussian.class
        apps/mrm/build/statistics/GaussianWrapper.class
        apps/mrm/images/antenna.png
        apps/mrm/java/org/contikios/mrm/AngleInterval.java
        apps/mrm/java/org/contikios/mrm/AreaViewer.java
        apps/mrm/java/org/contikios/mrm/ChannelModel.java
        apps/mrm/java/org/contikios/mrm/FormulaViewer.java
        apps/mrm/java/org/contikios/mrm/Interval.java
        apps/mrm/java/org/contikios/mrm/MRM.java
        apps/mrm/java/org/contikios/mrm/MRMVisualizerSkin.java
        apps/mrm/java/org/contikios/mrm/ObstacleWorld.java
        apps/mrm/java/org/contikios/mrm/RayData.java
        apps/mrm/java/org/contikios/mrm/RayPath.java
        apps/mrm/java/statistics/CDF_Normal.java
        apps/mrm/java/statistics/Gaussian.java
        apps/mrm/java/statistics/GaussianWrapper.java
        apps/mrm/lib/mrm.jar
        apps/mrm/build.xml
        apps/mrm/cooja.config
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1101Radio\$1\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1101Radio\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1101Radio\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1101Radio\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1101Radio\$4.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1101Radio\$5.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1101Radio\$6.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1101Radio\$7.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1101Radio.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1120Radio\$1\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1120Radio\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1120Radio\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1120Radio\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1120Radio\$4.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1120Radio\$5.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1120Radio\$6.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1120Radio\$7.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC1120Radio.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC2420RadioPacketConverter.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC2520Radio\$1\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC2520Radio\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC2520Radio\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC2520Radio\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC2520Radio\$4.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC2520Radio\$5.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC2520Radio\$6.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC2520Radio.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CC430Radio.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CoojaExternalFlash.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CoojaM25P80\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CoojaM25P80.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/CRCCoder.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/ESBButton.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/ESBLED\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/ESBLED\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/ESBLED.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Exp5438LED\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Exp5438LED\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Exp5438LED\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Exp5438LED.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/GCRCoder.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Msp802154Radio\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Msp802154Radio\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Msp802154Radio\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Msp802154Radio\$4.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Msp802154Radio\$5.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Msp802154Radio\$6.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Msp802154Radio\$7.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/Msp802154Radio.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspButton.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspClock.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspDebugOutput\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspDebugOutput.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspDefaultSerial.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspLED\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspLED\$LedsPanel.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspLED.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspMoteID\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspMoteID\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspMoteID.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspSerial\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspSerial\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspSerial\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/MspSerial.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyButton.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyCoffeeFilesystem\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyCoffeeFilesystem\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyCoffeeFilesystem\$3\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyCoffeeFilesystem\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyCoffeeFilesystem\$4\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyCoffeeFilesystem\$4\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyCoffeeFilesystem\$4.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyCoffeeFilesystem.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyFlash\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyFlash\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyFlash\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyFlash.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyLED\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyLED\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyLED\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyLED.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/SkyTemperature.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TR1001Radio\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TR1001Radio\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TR1001Radio\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TR1001Radio.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TR1001RadioPacketConverter\$AccumulatedConversionState.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TR1001RadioPacketConverter.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TrxebLEDs\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TrxebLEDs\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TrxebLEDs\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TrxebLEDs.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TyndallLED\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TyndallLED\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TyndallLED\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TyndallLED\$4.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/TyndallLED.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/UsciA0Serial.class
        apps/mspsim/build/org/contikios/cooja/mspmote/interfaces/UsciA1Serial.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/BreakpointsUI\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/BreakpointsUI\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/BreakpointsUI\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/BreakpointsUI\$4.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/BreakpointsUI\$5.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/BreakpointsUI\$6.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/BreakpointsUI\$7.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/BreakpointsUI\$8.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/BreakpointsUI.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/CodeUI\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/CodeUI\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/CodeUI\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/CodeUI\$4.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/CodeUI.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/CodeVisualizerSkin\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/CodeVisualizerSkin\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/CodeVisualizerSkin.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspBreakpoint\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspBreakpoint.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCLI\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCLI\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCLI\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCLI\$4.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCLI\$5.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCLI.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$10.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$11.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$12.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$13.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$14.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$15.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$16.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$3\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$4.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$5.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$6.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$7.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$8.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$9.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher\$Rule.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCodeWatcher.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCycleWatcher\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCycleWatcher\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCycleWatcher\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspCycleWatcher.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspStackWatcher\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspStackWatcher\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspStackWatcher\$3\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspStackWatcher\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/plugins/MspStackWatcher.class
        apps/mspsim/build/org/contikios/cooja/mspmote/AbstractMspMoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/CC430Mote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/CC430MoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/ESBMote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/ESBMoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Eth1120Mote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Eth1120MoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Exp1101Mote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Exp1101MoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Exp1120Mote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Exp1120MoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Exp2420Mote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Exp2420MoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Exp5438Mote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Exp5438MoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/JCreateMote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/JCreateMoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/MspCompileDialog.class
        apps/mspsim/build/org/contikios/cooja/mspmote/MspMote\$1\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/MspMote\$1.class
        apps/mspsim/build/org/contikios/cooja/mspmote/MspMote\$2.class
        apps/mspsim/build/org/contikios/cooja/mspmote/MspMote\$3.class
        apps/mspsim/build/org/contikios/cooja/mspmote/MspMote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/MspMoteMemory\$MemoryCPUMonitor.class
        apps/mspsim/build/org/contikios/cooja/mspmote/MspMoteMemory.class
        apps/mspsim/build/org/contikios/cooja/mspmote/MspMoteTimeEvent.class
        apps/mspsim/build/org/contikios/cooja/mspmote/MspMoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/SentillaUSBMote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/SentillaUSBMoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/SkyMote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/SkyMoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Trxeb1120Mote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Trxeb1120MoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Trxeb2520Mote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Trxeb2520MoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/TyndallMote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/TyndallMoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/WismoteMote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/WismoteMoteType.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Z1Mote.class
        apps/mspsim/build/org/contikios/cooja/mspmote/Z1MoteType.class
        apps/mspsim/build/exp5438.png
        apps/mspsim/build/tyndall.png
        apps/mspsim/example/helloworld.firmware
        apps/mspsim/example/helloworld.ihex
        apps/mspsim/example/helloworld.map
        apps/mspsim/lib/coffee.jar
        apps/mspsim/lib/cooja_mspsim.jar
        apps/mspsim/lib/jipv6.jar
        apps/mspsim/lib/mspsim.jar
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/CC1101Radio.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/CC1120Radio.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/CC2420RadioPacketConverter.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/CC2520Radio.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/CC430Radio.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/CoojaExternalFlash.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/CoojaM25P80.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/CRCCoder.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/ESBButton.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/ESBLED.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/Exp5438LED.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/GCRCoder.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/Msp802154Radio.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/MspButton.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/MspClock.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/MspDebugOutput.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/MspDefaultSerial.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/MspLED.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/MspMoteID.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/MspSerial.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/SkyButton.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/SkyCoffeeFilesystem.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/SkyFlash.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/SkyLED.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/SkyTemperature.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/TR1001Radio.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/TR1001RadioPacketConverter.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/TrxebLEDs.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/TyndallLED.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/UsciA0Serial.java
        apps/mspsim/src/org/contikios/cooja/mspmote/interfaces/UsciA1Serial.java
        apps/mspsim/src/org/contikios/cooja/mspmote/plugins/BreakpointsUI.java
        apps/mspsim/src/org/contikios/cooja/mspmote/plugins/CodeUI.java
        apps/mspsim/src/org/contikios/cooja/mspmote/plugins/CodeVisualizerSkin.java
        apps/mspsim/src/org/contikios/cooja/mspmote/plugins/MspBreakpoint.java
        apps/mspsim/src/org/contikios/cooja/mspmote/plugins/MspCLI.java
        apps/mspsim/src/org/contikios/cooja/mspmote/plugins/MspCodeWatcher.java
        apps/mspsim/src/org/contikios/cooja/mspmote/plugins/MspCycleWatcher.java
        apps/mspsim/src/org/contikios/cooja/mspmote/plugins/MspStackWatcher.java
        apps/mspsim/src/org/contikios/cooja/mspmote/AbstractMspMoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/CC430Mote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/CC430MoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/ESBMote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/ESBMoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Eth1120Mote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Eth1120MoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Exp1101Mote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Exp1101MoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Exp1120Mote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Exp1120MoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Exp2420Mote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Exp2420MoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Exp5438Mote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Exp5438MoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/JCreateMote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/JCreateMoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/MspCompileDialog.java
        apps/mspsim/src/org/contikios/cooja/mspmote/MspMote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/MspMoteMemory.java
        apps/mspsim/src/org/contikios/cooja/mspmote/MspMoteTimeEvent.java
        apps/mspsim/src/org/contikios/cooja/mspmote/MspMoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/SentillaUSBMote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/SentillaUSBMoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/SkyMote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/SkyMoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Trxeb1120Mote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Trxeb1120MoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Trxeb2520Mote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Trxeb2520MoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/TyndallMote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/TyndallMoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/WismoteMote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/WismoteMoteType.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Z1Mote.java
        apps/mspsim/src/org/contikios/cooja/mspmote/Z1MoteType.java
        apps/mspsim/build.xml
        apps/mspsim/cooja.config
        apps/mspsim/exp5438.png
        apps/mspsim/README.md
        apps/mspsim/tyndall.png
        apps/native_gateway/java/org/contikios/cooja/plugins/NativeIPGateway.java
        apps/native_gateway/build.xml
        apps/native_gateway/cooja.config
        apps/powertracker/build/PowerTracker\$1.class
        apps/powertracker/build/PowerTracker\$2.class
        apps/powertracker/build/PowerTracker\$3.class
        apps/powertracker/build/PowerTracker\$4.class
        apps/powertracker/build/PowerTracker\$5\$1.class
        apps/powertracker/build/PowerTracker\$5.class
        apps/powertracker/build/PowerTracker\$6.class
        apps/powertracker/build/PowerTracker\$7.class
        apps/powertracker/build/PowerTracker\$MoteTracker.class
        apps/powertracker/build/PowerTracker\$RadioState.class
        apps/powertracker/build/PowerTracker.class
        apps/powertracker/java/PowerTracker.java
        apps/powertracker/lib/powertracker.jar
        apps/powertracker/build.xml
        apps/powertracker/cooja.config
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$1.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$2.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$3.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$4.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$5\$1.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$5\$2.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$5\$3.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$5.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$6\$1.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$6.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient\$ClientListener.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketClient.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$1.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$2.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$3.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$4\$1.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$4\$2.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$4\$3.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$4\$4.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$4\$5.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$4.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$5.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$6.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$IncomingDataHandler\$1.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$IncomingDataHandler.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$SerialDataObserver.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer\$ServerListener.class
        apps/serial_socket/build/org/contikios/cooja/serialsocket/SerialSocketServer.class
        apps/serial_socket/java/org/contikios/cooja/serialsocket/SerialSocketClient.java
        apps/serial_socket/java/org/contikios/cooja/serialsocket/SerialSocketServer.java
        apps/serial_socket/lib/serial_socket.jar
        apps/serial_socket/build.xml
        apps/serial_socket/cooja.config
        build/test_template.c
        config/test_template.c
        examples/project_new_interface/java/DummyInterface.java
        examples/project_new_interface/build.xml
        examples/project_new_interface/cooja.config
        examples/project_new_interface/dummy_intf.c
        examples/project_new_interface/dummy_intf.h
        examples/project_new_plugin/java/MyDummyPlugin.java
        examples/project_new_plugin/build.xml
        examples/project_new_plugin/cooja.config
        examples/project_new_radiomedium/java/DummyRadioMedium.java
        examples/project_new_radiomedium/build.xml
        examples/project_new_radiomedium/cooja.config)
